2004-01-27  Pavel Roskin  <proski@gnu.org>

	* smbfs.c (smbfs_reconnect): Revert changes in a translated
	message.

2004-01-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/rpm: Workaround for spaces and single quotes in the path
	name.

2004-01-22  Pavel Roskin  <proski@gnu.org>

	* mcserv.c: Use HAVE_CRYPT instead of USE_CRYPT.  Remove
	references to HAVE_LIBCRYPT and HAVE_LIBCRYPT_I.  Reported by
	Christian Laubscher <christian.laubscher@tiscalinet.ch>

	* samba/configure.in: Rename to ...
	* samba/configure.ac: ... this.  Adjust dependencies.

2003-12-05  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* fish.c (fish_open_archive_int): Save some stack and place -C
	flag before host.

2003-11-28  Pavel Roskin  <proski@gnu.org>

	* undelfs.c: Use ext2fs/ext2_fs.h instead of linux/ext2_fs.h
	when possible.

2003-11-26  Pavel Roskin  <proski@gnu.org>

	* gc.c (vfs_ncs_getid): Merge with vfs_getid().

	* gc.c: Eliminate all code for timestamping parent filesystems.
	It's broken and undocumented.  Adjust all dependencies.

2003-11-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* direntry.c (vfs_s_resolve_symlink): Eliminate
	g_strdup_printf().
	(vfs_s_fullpath): Likewise.

2003-11-21  Pavel Roskin  <proski@gnu.org>

	* ftpfs.c (ftpfs_login_server): Explicit password should have
	priority over the netrc password and the anonymous password.
	Reported by Jindrich Makovicka <makovick@kmlinux.fjfi.cvut.cz>

2003-11-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* undelfs.c (undelfs_loaddel): Use g_try_malloc()/g_try_relloc()
	since we want to recover and not abort the program if we don't
	have enough memory.
	(com_err): Fix implementation.

2003-11-14  Pavel Roskin  <proski@gnu.org>

	* vfs.c (vfs_split): Deconstify.
	* direntry.c (vfs_s_get_path_mangle): Likewise.  "mangle" is in
	the name for a reason.  Use vfs_s_get_path() instead where the
	path should be preserved.
	* extfs.c (extfs_get_path_mangle): Likewise.
	* sfs.c (sfs_vfmake): Protect against changes in vfs_split().
