@@ -1,3 +1,8 @@
+2004-03-07  Andrew V. Samoilov  <sav@bcs.zp.ua>
+
+	* vfs.c (mc_def_ungetlocalcopy): Fix missed "%s".
+	* utilvfs.c (vfs_parse_ls_lga): Likewise.
+
 2004-01-27  Pavel Roskin  <proski@gnu.org>
 
 	* smbfs.c (smbfs_reconnect): Revert changes in a translated
